--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,10 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.instance.hostname=localhost
+
+
+zipkin.tracing.endpoint=http://localhost:9411
+zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+micrometer.tracing.sampler.probability=1.0 
+spring.zipkin.baseUrl=http://localhost:9411
